todo: add subQuery
