# src/modules/lessons/add-evaluation.dto.ts
@@ -1,0 +1,4 @@
+export class AddEvaluationDto {
+    user_id: string;
+    score: string;
+}
